third semester(fall 2023)/OOP 244/ws4/DIY/errors.txt
Label.cpp: In constructor ‘sdds::Label::Label(const char*, const char*)’:
Label.cpp:30:24: error: ‘strCpy’ was not declared in this scope
    strCpy(cont, content);
                        ^
